# agentl2

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  SYSTEM_STATUS.md  docker-compose.yml  docker-start.bat  docker-stop.bat  test_api.json  test_chat.json
collector/: Dockerfile  README.md  pyproject.toml
collector/src/agentl2/: __init__.py  api_client.py  collect_laws.py  collect_prec.py  config.py  db.py  logging.py  metrics.py  models.py  parsers.py  uuid_rules.py
collector/tests/: test_parsers.py  test_uuid_rules.py
llm/: .coverage  Dockerfile  README.md  README_TESTS.md  TEST_SUMMARY.md  coverage.xml  example_agent_usage.py  example_usage.py  pyproject.toml  pytest.ini  real_agent_server.py  requirements-test.txt  run_server.py  simple_server.py  start_server.bat  test_enhanced_pipeline.py
llm/config/: agent_configs.json  global_settings.json
llm/scripts/: 00_install_pgvector.sql  01_create_form_tables.sql  01_create_form_tables_no_vector.sql  02_insert_sample_data.sql  02_migrate_json_to_db.py  03_verify_data.sql  04_add_vector_columns.sql  05_bulk_migrate.py  06_simple_migrate.py  07_generate_sql.py  08_full_migrate.py  09_direct_migrate.py  10_fix_template_code.py  11_migrate_full_content.py  MIGRATION_COMPLETE.md  PGVECTOR_SETUP.md  README_MIGRATION.md  load_ml_data.py
llm/src/agentl2_llm/: __init__.py  config.py  models.py
llm/src/agentl2_llm/agents/: __init__.py  analyst_agent.py  base_agent.py  citation_agent.py  facilitator_agent.py  response_agent.py  search_agent.py  validator_agent.py
llm/tests/: __init__.py  conftest.py  test_agent_pipeline.py  test_base_agent.py  test_basic.py  test_facilitator_agent.py  test_pipeline.py  test_search_agent.py
ui/: Dockerfile  (+3 more)
(+42 files in other folders)
